update icon dan menu dashboard

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -33,7 +33,7 @@
                     android:id="@+id/editUsername"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:drawableLeft="@drawable/ic_person_black_24dp"
+                    android:drawableLeft="@drawable/ic_person_24dp"
                     android:hint="Username"
                     android:inputType="textPersonName"
                     android:textColor="#FFFFFF"
