--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -61,8 +61,8 @@
                             android:text="Portofolio Berbasis Talent Mapping"
                             android:textColor="#FFFFFF"
                             android:textSize="10dp"
-                            android:textStyle="bold" />
-
+                            android:textStyle="bold"
+                            android:onClick="Portofolio"/>
                     </RelativeLayout>
                 </LinearLayout>
             </LinearLayout>
