--- a/app/src/main/res/layout/activity_splashscreen.xml
+++ b/app/src/main/res/layout/activity_splashscreen.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
+    android:background="@drawable/baground"
     tools:context=".Splashscreen">
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="230dp"
-        android:layout_height="230dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:background="@drawable/logo"/>
@@ -22,6 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
+        android:textColor="#FFFFFF"
         android:text="Copyright 2020 - Created by Dhea Melyadinata"/>
 
 </RelativeLayout>
