--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -10,7 +10,7 @@
     
     <com.synnapps.carouselview.CarouselView
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="230dp"
         app:pageColor="#00000000"
         app:fillColor="#FFFFFFFF"
         app:slideInterval="3000"
@@ -21,10 +21,10 @@
     </com.synnapps.carouselview.CarouselView>
 
     <LinearLayout
-        android:layout_marginTop="255dp"
+        android:layout_marginTop="250dp"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <!--layout button atas-->
 
@@ -138,8 +138,8 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="10pt"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:orientation="horizontal">
 
             <LinearLayout
