--- a/app/src/main/res/layout/activity_portofolio.xml
+++ b/app/src/main/res/layout/activity_portofolio.xml
@@ -24,7 +24,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginRight="10dp" />
+                android:layout_marginRight="10dp"
+                tools:listitem="@layout/item_tema_portofolio"/>
 
         </RelativeLayout>
     </LinearLayout>
