--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -136,7 +136,8 @@
                             android:text="Agenda Kegiatan"
                             android:textColor="#FFFFFF"
                             android:textSize="10dp"
-                            android:textStyle="bold" />
+                            android:textStyle="bold"
+                            android:onClick="AgendaKegiatan"/>
                     </RelativeLayout>
                 </LinearLayout>
             </LinearLayout>
