--- a/app/src/main/res/layout/activity_jurnal_kegiatan.xml
+++ b/app/src/main/res/layout/activity_jurnal_kegiatan.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    tools:context=".JurnalKegiatan">
+    tools:context=".Orangtua.JurnalKegiatan">
 
     <include layout="@layout/title_jurnal_kegiatan" />
 
