--- a/app/src/main/res/layout/activity_portofolio.xml
+++ b/app/src/main/res/layout/activity_portofolio.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    tools:context=".Portofolio">
+    tools:context=".Orangtua.Portofolio">
 
     <include layout="@layout/title_tema_portofolio" />
 
