update dashboard membuat intent layout profil identitas keluarga

--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -191,7 +191,8 @@
                         android:text="Profil Identitas"
                         android:textColor="#FFFFFF"
                         android:textSize="10dp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:onClick="ProfilIdentitas"/>
                 </RelativeLayout>
             </LinearLayout>
         </LinearLayout>
