--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -35,6 +35,7 @@
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/ic_person_24dp"
                     android:hint="Username"
+                    android:textSize="14dp"
                     android:inputType="textPersonName"
                     android:textColor="#FFFFFF"
                     android:textColorHint="#FFFFFF" />
@@ -51,6 +52,7 @@
                     android:layout_marginTop="16dp"
                     android:drawableLeft="@drawable/ic_https_black_24dp"
                     android:hint="Password"
+                    android:textSize="14dp"
                     android:inputType="textPassword"
                     android:textColor="#FFFFFF"
                     android:textColorHint="#FFFFFF" />
