--- a/app/src/main/res/layout/activity_registrasi.xml
+++ b/app/src/main/res/layout/activity_registrasi.xml
@@ -34,6 +34,7 @@
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/ic_person_24dp"
                     android:hint="Username"
+                    android:textSize="14dp"
                     android:inputType="textPersonName"
                     android:textColor="#FFFFFF"
                     android:textColorHint="#FFFFFF" />
@@ -50,6 +51,7 @@
                     android:layout_marginTop="16dp"
                     android:drawableLeft="@drawable/ic_https_black_24dp"
                     android:hint="Password"
+                    android:textSize="14dp"
                     android:inputType="textPassword"
                     android:textColor="#FFFFFF"
                     android:textColorHint="#FFFFFF" />
@@ -65,6 +67,7 @@
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/ic_email_black_24dp"
                     android:hint="E-mail"
+                    android:textSize="14dp"
                     android:inputType="textEmailAddress"
                     android:textColor="#FFFFFF"
                     android:textColorHint="#FFFFFF" />
